# tlsd

./: AUTHORS  Makefile.am  NEWS  README  configure.ac  fp2alias.1  fp2alias.c  std2fifo.1  std2fifo.c  tlsd.1  tlsd.c  tlsd.texi
examples/chat/: nc-chatroom.service  tls-chat.sh  tlsd-chat.sh  tlsd-chatroom.service
examples/file-server/: accept-files.sh  browse-files.sh  serve-files.sh
examples/p2p-im/: Makefile  approximate-setup.sh  libpurple-fifo-plugin.c  tlsd-im-cmd.sh  tlsd-im-reconnect.service  tlsd-im-reconnect.sh  tlsd-im-reconnect.timer  tlsd-im.service  tlsd-im.sh
tests/: authenticate.sh  test-cert-1.pem  test-cert-2.pem  test-key-1.pem  test-key-2.pem  wait-for-initialization.sed
